2003-09-08  Angus Leeming  <leeming@lyx.org>

	* FileDialog.C:
	* QCitation.C:
	* QCitationDialog.C:
	* QCommandBuffer.C:
	* QContentPane.C:
	* QGraphics.C:
	* QLMenubar.C:
	* QLPopupMenu.C:
	* QLog.C:
	* QMathDialog.C:
	* QParagraphDialog.C:
	* QPrefsDialog.C:
	* QRef.C:
	* QTexinfo.C:
	* QtView.C:
	* lyx_gui.C:
	* panelstack.C:
	* qscreen.C:
	* qt_helpers.C: remove redundant using directives.

2003-09-07  Angus Leeming  <leeming@lyx.org>

	* BulletsModule.h: remove #include "support/std_string.h", <vector>.
	* QBrowseBox.h: remove #include <qwidget.h>.
	* QCharacter.h: remove #include "support/std_string.h".
	* QCharacterDialog.h: remove #include <qevent.h>, <qcheckbox.h>,
	<qcombobox.h>.
	* QContentPane.h: remove #include <qevent.h>.
	* QDialogView.h: remove #include <qfont.h>.
	* QDocumentDialog.h: remove #include "ui/BulletsModuleBase.h".
	* QLPopupMenu.h: remove #include <map>.
	* QLToolbar.h: remove #include <vector>.
	* QWorkArea.h: remove #include <qwidget.h>, <qpixmap.h>.
	* Qt2Base.h: remove #include <qfont.h>.
	* QtLyXView.h: remove #include "frontends/LyXView.h".
	* emptytable.h: remove #include <qpainter.h>.
	* qsetborder.h: remove #include <qcolor.h>.

2003-09-06  Angus Leeming  <leeming@lyx.org>

	* QParagraph.C: add Spacing.h and vspace.h includes.

2003-09-06  Angus Leeming  <leeming@lyx.org>

	* QContentPane.C: add a typedef for LyXKeySymPtr.

2003-09-06  Angus Leeming  <leeming@lyx.org>

	* QCitationDialog.C:
	* QMathDialog.C:
	* QTabularDialog.C: remove using std::endl directive.

2003-09-06  Kornel Benko  <kornel.benko@berlin.de>

	* QLyXKeySym.C: re-add <map> header file.
	* QBrowseBox.C: re-add <cmath> header file.
	* qttableview.C: re-add <limits.h> header file.

2003-09-05  Angus Leeming  <leeming@lyx.org>

	* QCitation.h: 
	* QGraphics.h: 
	* QPrefs.h: 
	* qscreen.[Ch]: 
	ensure that the header files can be compiled stand-alone.

2003-09-05  Angus Leeming  <leeming@lyx.org>

	* *.C: strip out redundant #includes. (352 in total.)
