@@ -1,3 +1,12 @@
+2003-09-08  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
+
+	* QLToolbar.C: include <qtoolbar.h>
+
+	* QLPopupMenu.h: include <utility>
+
+	* qt_helpers.C: 
+	* qfont_loader.C: include <algorithm>
+
 2003-09-08  Angus Leeming  <leeming@lyx.org>
 
 	* FileDialog.C:
